fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -609,7 +609,7 @@ footer .container-item {
 }
 
 nav.scrolled .logo a {
-  max-width: 350px;
+  max-width: 400px;
   transition: max-width 1s ease-in-out 0.3s;
 }
 
@@ -1042,6 +1042,7 @@ a.button-inverted:hover {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 2.3333333333vw;
+    overflow: hidden;
   }
 
   footer .socials {
@@ -1412,6 +1413,17 @@ a.button-inverted:hover {
 
   #lead-text .container-item:nth-child(1) {
     grid-column: 1 / 7;
+    grid-row: 1 / 3
+  }
+
+  #lead-text .container-item:nth-child(2) {
+    grid-column: 1 / 3;
+    grid-row-start: 1;
+  }
+
+  #lead-text .container-item:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row-start: 2;
   }
 }
 
